# mnl

./: .gitignore  README.md  netlify.toml  package-lock.json  package.json  render.yaml  tsconfig.base.json
apps/cms-wagtail/: README.md  manage.py  pyproject.toml
apps/cms-wagtail/mnl_cms/: settings.py  urls.py  wsgi.py
apps/cms-wagtail/newsroom/: admin.py  api_urls.py  api_views.py  apps.py  models.py  rbac.py  services.py  views.py  wagtail_hooks.py
apps/cms-wagtail/newsroom/management/commands/: bootstrap_cms_demo_users.py  bootstrap_cms_rbac.py  bootstrap_cms_reporter_user.py  bootstrap_cms_site.py  import_scourt_reports.py
apps/cms-wagtail/newsroom/migrations/: 0001_initial.py  0002_articlepage_ai_external_id.py
apps/cms-wagtail/newsroom/templates/newsroom/admin/: desk_queue.html
apps/cms-wagtail/newsroom/tests/: test_api.py  test_bootstrap_reporter_user.py  test_intake.py  test_policies.py  test_scourt_import_command.py
apps/web/: package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/components/: article-card.tsx  section-chip.tsx
apps/web/lib/: content.ts
docs/contracts/: CMS_WEB_HANDOFF.md
docs/dev_threads/: README.md  THREAD_START_PROMPTS.md  thread-a-domain.md  thread-b-cms.md  thread-c-ai.md  thread-d-web.md  thread-e-portal.md  thread-f-ops.md
docs/dev_threads/master/: MASTER_DECISIONS.md  MASTER_INBOX.md  (+1 more)
docs/roadmap/: COLLAB_WORKFLOW.md  ISSUE_TEMPLATES.md  MASTER_PLAN.md  POLICY_BASELINE_2026-03-02.md  README.md  SOLUTION_SELECTION.md  SPRINT_0_BOOTSTRAP.md
(+12 files in other folders)
